<resources>
    <string name="app_name">TeamKART</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loginbackground">LoginBackground</string>
    <string name="sign_in_to_your_account">Sign in To Your Account</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="newsletter">Newsletter</string>
    <string name="subscribe">Subscribe</string>
    <string name="forum">FORUM</string>
    <string name="daq">DAQ</string>
    <string name="services">SERVICES</string>
    <string name="message">MESSAGE</string>
    <string name="new_thread">NEW THREAD</string>
    <string name="friends">FRIENDS</string>
    <string name="search">SEARCH</string>
    <string name="latest">Latest</string>
    <string name="archive">ARCHIVE</string>
    <string name="get_details">GET DETAILS</string>
    <string name="title_activity_daq">DAQ</string>
    <string name="title_activity_services">Services</string>
    <string name="all">All</string>
    <string name="rpm_of_wheels">RPM of Wheels</string>
    <string name="acceleration_among_3_axis">Acceleration among 3 axis</string>
    <string name="steering_angle">Steering Angle</string>
    <string name="coolent_temperature">Coolent Temperature</string>
    <string name="crank_shaft_rpm">Crank Shaft RPM</string>
    <string name="throttle_position">Throttle Position</string>
    <string name="coolent_flow">Coolent Flow</string>
    <string name="break_pressure">Break Pressure</string>
    <string name="fuel_level">Fuel Level</string>
    <string name="intake_air_pressure">Intake Air Pressure</string>
    <string name="select_all">Select All</string>
    <string name="sample">sample</string>
    <string name="_2014_bahrain_gp_thread">2014 Bahrain GP Thread</string>
    <string name="david_smith">David Smith</string>
    <string name="car_care_tips">Car Care Tips</string>
    <string name="kamlesh_yadav">Kamlesh Yadav</string>
    <string name="who_will_win_next_race">Who Will win next Race</string>
    <string name="jhon_parker">Jhon Parker</string>
    <string name="sae_discussion_forum">SAE Discussion Forum</string>
    <string name="nikhilesh_goyal">Nikhilesh Goyal</string>
    <string name="some_handy_tips">Some Handy Tips</string>
    <string name="mukul_kumar">Mukul Kumar</string>
    <string name="none">NONE</string>
    <string name="share">SHARE</string>
    <string name="save">SAVE</string>
    <string name="find_a_service_centre">Find a Service Centre</string>
    <string name="find_a_dealer_nearby">Find a Dealer Nearby</string>
    <string name="buy_a_spare">Buy a Spare</string>
    <string name="book_a_track">Book a Track</string>
    <string name="find_a_service_centre_caps">FIND A SERVICE CENTRE</string>
    <string name="please_enter_your_pincode">Please Enter Your Pincode</string>
    <string name="_123456">123456</string>
    <string name="go">GO</string>
    <string name="bangalore">Bangalore:</string>
</resources>
