<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_primary_dark"
    android:orientation="horizontal">

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/forum"
        android:textColor="@color/white" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/daq"
        android:textColor="@color/white" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/services"
        android:textColor="@color/white" />
</LinearLayout>