<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/loginbackground"
        app:srcCompat="@color/design_default_color_primary_dark" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in"
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingTop="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="1dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingTop="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/newsletter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/button"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/newsletter"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_newsletter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newsletter"
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingTop="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:targetApi="o" />

    <Button
        android:id="@+id/subscribe"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_newsletter"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/subscribe"
        android:textColor="@color/white" />
</RelativeLayout>